--- a/EstiloP.css
+++ b/EstiloP.css
@@ -1,13 +1,23 @@
 
-.cuadrado {
+.superior {
       width: 100%;       
       height: 50px;       
       background-color: #163d73; 
-      position: absolute;
+      position:absolute;
       top: 0;
       left: 0;
 
     }
+
+.Inferior{
+      width:100%;       
+      height:50px;       
+      background-color: #163d73; 
+      position:absolute;
+      bottom:0;
+      left:0;
+}   
+
 .texto {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         text-align: center;
@@ -17,12 +27,37 @@
         font-size: 25px;
 
 }
-.cuadrado img{
+
+.mi-boton{
+  background-color: #d7b65a;
+  top: 0;
+  margin-top: 7px;
+  position: absolute;
+  right: 10px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: antiquewhite;
+  transition: background-color 0.3s ease;
+}
+.mi-boton:hover{
+  background-color:#2069e0;
+}
+
+.superior img{
    position: absolute; 
   top: 7px;  
   left: 40px;  
   width: 120px; 
   height: auto; 
+}
+
+.Inferior img{
+  position: absolute;
+  bottom:0;
+  margin-left: 48%;
+  width: 93px;
 }
 
 body{
