--- a/EstiloP.css
+++ b/EstiloP.css
@@ -13,7 +13,7 @@
       width:100%;       
       height:50px;       
       background-color: #163d73; 
-      position:absolute;
+      position:fixed;
       bottom:0;
       left:0;
 }   
@@ -63,8 +63,84 @@
 body{
     background-color:rgb(255, 255, 255);
     font-family: Arial, sans-serif;
-    padding: 10%;
+    padding: 5%;
     box-sizing: border-box;
     margin: 20px, 0;
  
 }
+.calendario{
+
+  padding-top: 5px;
+  display:flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  max-width: 550px;
+  height: 470px;
+   
+   background-color:#8599b6;
+   flex-direction: column;
+   border-radius: 30px;
+}
+table {
+
+  border-collapse: collapse;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+table th, table tr{
+  border: 1px solid black;
+  padding: 10px;
+  text-align: center;
+}
+tr, th {
+  width: 50px;
+  height: 50px;
+}
+.dias{background-color: #d7b65a;}
+.informacion_1{
+  display: flex;
+  align-items: center;     
+  justify-content: center; 
+  height: 200px;    
+  background-color: #8599b6;
+  max-width: 550px;
+  height: 100px;
+  border-radius: 30px;
+}
+.chatbot{
+  max-width: 550px;
+  height: 470px;
+  background-color:#8599b6;
+  border-radius: 30px;
+}
+.informacion_2{
+  padding: 20px;
+text-align: center;
+align-items: center;
+  background-color: #8599b6;
+  max-width: 550px;
+  height: 100px;
+  border-radius: 30px;
+  
+}
+
+.grid {
+
+ display: grid;
+  grid-template-columns: 50% 50%; 
+  grid-template-rows: 50% 50%;
+  grid-template-areas: "calendario . informacion_2"
+  "informacion_1 . chatbot";
+  gap: 10px;
+}
+
+h1{color:  #163d73;}
+h3 {  font-size: 20px;
+color:#163d73;
+}
+
+p.ayuda {
+  font-size: 15px;
+  color:#163d73;;
+}
+
