--- a/EstiloP.css
+++ b/EstiloP.css
@@ -106,12 +106,15 @@ tr, th {
   max-width: 550px;
   height: 100px;
   border-radius: 30px;
+  margin-top: 500px;
 }
 .chatbot{
+  
   max-width: 550px;
   height: 470px;
   background-color:#8599b6;
   border-radius: 30px;
+  margin-top: 150px;
 }
 .informacion_2{
   padding: 20px;
@@ -128,10 +131,8 @@ align-items: center;
 
  display: grid;
   grid-template-columns: 50% 50%; 
-  grid-template-rows: 50% 50%;
-  grid-template-areas: "calendario . informacion_2"
-  "informacion_1 . chatbot";
-  gap: 10px;
+  grid-template-rows: 0px;
+  grid-template-areas: "calendario . informacion_2";
 }
 
 h1{color:  #163d73;}
