--- a/EstiloP.css
+++ b/EstiloP.css
@@ -3,7 +3,7 @@
       width: 100%;       
       height: 50px;       
       background-color: #163d73; 
-      position:absolute;
+      position:fixed;
       top: 0;
       left: 0;
 
