Actualización del fondo de Inicio de Sesión
Cambié el fondo de la página de inicio de sesión por un nuevo fondo y arreglé faltas de ortografía.

--- a/estiloL.css
+++ b/estiloL.css
@@ -7,11 +7,11 @@
 
 body {
   font-family: 'Segoe UI', sans-serif;
-  background-image: url('fondologin.jpg'); /* o 'img/fondo.jpg' según la ruta */
+  background-image: url('Inicio.jpg'); /* o 'img/fondo.jpg' según la ruta */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
