--- a/Doctores/Estilomedico.css
+++ b/Doctores/Estilomedico.css
@@ -8,7 +8,7 @@ align-items: center;
 text-align: center;
 justify-content: center;
 display: flex;
-background-image: url(Imagenes/Inicio.png);
+background-image: url(../Imagenes/Inicio.png);
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
@@ -102,7 +102,7 @@ tr, th {
     font-size: 50px;
     color: #c4ad5c;
     position: absolute;
-    top: -30px;
+    top: -40px;
     margin-left: 28px;
 
 }
@@ -110,7 +110,7 @@ table{
     border-collapse: collapse;
 }
 .Robot{
-    background-image: url(Imagenes/images.jpeg);
+    background-image: url(../Imagenes/images.jpeg);
     border-radius: 50px;
     height: 100px;
     width: 100px;
@@ -139,4 +139,55 @@ background-color:rgb(180, 0, 0);
 border-radius:10px;
 
 
+}
+.group {
+  line-height: 28px;
+  align-items: center;
+  position: absolute;
+  max-width: 190px;
+  top: 70px;
+  left: 212px;
+}
+
+.input {
+  font-family: "Montserrat", sans-serif;
+  width: 100%;
+  height: 30px;
+  padding-left: 2.5rem;
+  /*box-shadow: 0 0 0 1.5px #2b2c37, 0 0 25px -17px #000;*/
+  border: 0;
+  border-radius: 12px;
+  background-color: #c4ad5c;
+  outline: none;
+  color: #000000;
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+  cursor: text;
+  z-index: 0;
+}
+
+.input::placeholder {
+  color: #000000;
+}
+
+.input:hover {
+  box-shadow: 0 0 0 2.5px #2f303d, 0px 0px 25px -15px #000;
+}
+
+.input:active {
+  transform: scale(0.95);
+}
+
+.input:focus {
+  box-shadow: 0 0 0 2.5px #082c6c;
+}
+
+.search-icon {
+  position: absolute;
+  left: 1rem;
+  fill: #000000;
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  z-index: 1;
+  top: 8px;
 }
