Creacion estilo de pagina Aministrador
Creacion y cambios de colores y de imagen en boton de ayuda para chatbot,
Creacion de estilo y pagina de administrador

--- a/admin.css
+++ b/admin.css
@@ -35,11 +35,11 @@ background-attachment: fixed;
 }
 .mi-boton{
     color: white;
-    margin-left: 130px;
+    margin-left: 157px;
     top: 70px;
     position: absolute;
     height: 30px;
-    width: 100px;
+    width: 130px;
     border-radius: 30px;
     cursor: pointer;
     background-color: #c4ad5c;
@@ -55,7 +55,7 @@ background-attachment: fixed;
     top: 70px;
     position: absolute;
     height: 30px;
-    width: 100px;
+    width: 130px;
     border-radius: 30px;
     cursor: pointer;
     background-color: #c4ad5c;
@@ -68,6 +68,8 @@ p{
 font-size: 30px;
 position: absolute;
 }
+
+
 .tablas{
   display: flex;
   position: absolute;
@@ -106,11 +108,9 @@ tr, th {
     margin-left: 28px;
 
 }
-table{
-    border-collapse: collapse;
-}
 .Robot{
-    background-image: url(Imagenes/images.jpeg);
+    background-image: url(Imagenes/robot.png);
+    background-color: #12346e;
     border-radius: 50px;
     height: 100px;
     width: 100px;
@@ -137,6 +137,16 @@ width: 100px;
 height: 20px;
 background-color:rgb(180, 0, 0);
 border-radius:10px;
+}
+
+
+.estadicticas{
+    background-color: #818181; 
+    position:absolute;
+    width: 850px;
+    height: 450px;  
+    top: 215px;
+    border-radius: 10px;
 
 
 }
