--- a/Pacientes/Estilo.css
+++ b/Pacientes/Estilo.css
@@ -25,3 +25,9 @@
     text-align: left;
     margin-left: 20px;    
 }
+
+.info{
+    align-self: flex-start;  
+    text-align: left;
+    margin-left: 20px;   
+}
