--- a/admin.css
+++ b/admin.css
@@ -109,8 +109,7 @@ tr, th {
 
 }
 .Robot{
-    background-image: url(Imagenes/robot.png);
-    background-color: #12346e;
+    background-image: url(Imagenes/images.jpeg);
     border-radius: 50px;
     height: 100px;
     width: 100px;
