--- a/SegundaPagina.css
+++ b/SegundaPagina.css
@@ -19,7 +19,7 @@ background-attachment: fixed;
 .superior{
 
     display: flex;
-    background-color: #ff0000;
+    background-color: #082c6c;
     height: 100px;
     width: 1000px;
     border-radius: 30px;
@@ -58,6 +58,27 @@ background-attachment: fixed;
 }
 
 .Ajustes img {
+    height: 70%;     
+    width: 70%;
+    object-fit: contain;
+}
+.Atras {
+    border: none;
+    border-radius: 50%;
+    position: absolute;
+    top: 10px;      
+    right: 285px;   
+    height: 40px;  
+    width: 40px;
+    background-color: transparent;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
+
+.Atras img {
     height: 70%;     
     width: 70%;
     object-fit: contain;
