--- a/Administradores/Estilomed.css
+++ b/Administradores/Estilomed.css
@@ -8,7 +8,7 @@ align-items: center;
 text-align: center;
 justify-content: center;
 display: flex;
-background-image: url(Imagenes/Inicio.png);
+background-image: url(../Imagenes/Inicio.png);
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
@@ -27,19 +27,19 @@ background-attachment: fixed;
 .logo{
     position: absolute;
     height: 60px;
-    width: 190px;
-    right:300px;
-    top :30px;
+    width: 170px;
+   right:300px;
+   top :30px;
 
     
 }
 .mi-boton{
     color: white;
-    margin-left: 157px;
+    margin-left: 130px;
     top: 70px;
     position: absolute;
     height: 30px;
-    width: 130px;
+    width: 100px;
     border-radius: 30px;
     cursor: pointer;
     background-color: #c4ad5c;
@@ -55,7 +55,7 @@ background-attachment: fixed;
     top: 70px;
     position: absolute;
     height: 30px;
-    width: 130px;
+    width: 100px;
     border-radius: 30px;
     cursor: pointer;
     background-color: #c4ad5c;
@@ -68,8 +68,6 @@ p{
 font-size: 30px;
 position: absolute;
 }
-
-
 .tablas{
   display: flex;
   position: absolute;
@@ -104,12 +102,15 @@ tr, th {
     font-size: 50px;
     color: #c4ad5c;
     position: absolute;
-    top: -30px;
+    top: -40px;
     margin-left: 28px;
 
 }
+table{
+    border-collapse: collapse;
+}
 .Robot{
-    background-image: url(Imagenes/images.jpeg);
+    background-image: url(../Imagenes/images.jpeg);
     border-radius: 50px;
     height: 100px;
     width: 100px;
@@ -121,46 +122,98 @@ tr, th {
     bottom: 40px;
     box-shadow: 5px 5px #072558;
 }
-.Reprogramar{
+.seg{
 color: white;
-width: 100px;
-height: 20px;
+width: 120px;
+height: 22px;
 background-color:#082c6c;
 border-radius:10px;
 
 
 }
-.NoConcurrio{
+.his{
 color: white;
-width: 100px;
-height: 20px;
+width: 120px;
+height: 22px;
 background-color:rgb(180, 0, 0);
 border-radius:10px;
-}
-
-
-.estadicticas{
-    background-color: #818181; 
-    position:absolute;
-    width: 850px;
-    height: 450px;  
-    top: 215px;
-    border-radius: 10px;
 
 
 }
+.group {
+  line-height: 28px;
+  align-items: center;
+  position: absolute;
+  max-width: 190px;
+  top: 70px;
+  left: 212px;
+}
+
+.input {
+  font-family: "Montserrat", sans-serif;
+  width: 100%;
+  height: 30px;
+  padding-left: 2.5rem;
+  /*box-shadow: 0 0 0 1.5px #2b2c37, 0 0 25px -17px #000;*/
+  border: 0;
+  border-radius: 12px;
+  background-color: #c4ad5c;
+  outline: none;
+  color: #000000;
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+  cursor: text;
+  z-index: 0;
+}
+
+.input::placeholder {
+  color: #000000;
+}
+
+.input:hover {
+  box-shadow: 0 0 0 2.5px #2f303d, 0px 0px 25px -15px #000;
+}
+
+.input:active {
+  transform: scale(0.95);
+}
+
+.input:focus {
+  box-shadow: 0 0 0 2.5px #082c6c;
+}
+
+.search-icon {
+  position: absolute;
+  left: 1rem;
+  fill: #000000;
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  z-index: 1;
+  top: 8px;
+}
+.Agregar{
+    color: white;
+    margin-left: 20px;
+    top: 0px;
+    position: absolute;
+    height: 30px;
+    width: 100px;
+    border-radius: 30px;
+    cursor: pointer;
+    background-color: #c4ad5c;
+    transition: backgroud-color 0.3s ease;
+}
+.Agregar:hover{
+     background-color: #2069e0;
+}
+
 @media(max-width: 768px){
   .superior{
- width: 100%;
-  flex-direction: column;
-  height: 120px;
+  width: 100%;
   }
 }
 @media(max-width: 480px){
   .superior{
   width: 100%;
-  flex-direction: column;
-  height: 120px;
-  
   }
 }
