--- a/Doctores/Agendas.css
+++ b/Doctores/Agendas.css
@@ -33,9 +33,9 @@ background-attachment: fixed;
 
     
 }
-.mi-boton{
+.Agregar{
     color: white;
-    margin-left: 130px;
+    margin-right: 450px;
     top: 70px;
     position: absolute;
     height: 30px;
@@ -46,7 +46,7 @@ background-attachment: fixed;
     transition: backgroud-color 0.3s ease;
 
 }
-.mi-boton:hover{
+.Agregar:hover{
      background-color: #2069e0;
 }
 .Boton{
@@ -86,6 +86,14 @@ position: absolute;
     top: 110px;
     font-size: 50px;
     position: absolute;
+}
+.fech{
+    font-family: 'OpenSans';
+    top: 20px;
+    right: 180px;
+    font-size: 30px;
+    position: absolute;
+    display: flex;
 }
 .dentro{
   
@@ -226,3 +234,37 @@ border-radius:10px;
   z-index: 1;
   top: 8px;
 }
+
+@media (max-width: 768px) {
+  .superior {
+    width: 100%;
+    flex-direction: column;
+    height: 70px;
+
+  }
+
+  .Texto {
+    font-size: 24px;
+    position: static; 
+    margin: 10px 0;
+  }
+
+  .logo {
+    width: 110px;
+    height: auto;
+    top:34px;
+    right: 14px;
+  }
+
+  .tablas {
+    flex-direction: column;
+    width: 100%;
+    overflow-x: auto;
+  }
+  .group{
+    width: 210px;
+    top:40px;
+    left: 20px;
+  }
+}
+
