--- a/Doctores/SegundaPagina.css
+++ b/Doctores/SegundaPagina.css
@@ -17,26 +17,90 @@ background-attachment: fixed;
 
 }
 .superior{
-
+    position: absolute;
+    top: 50px;
     display: flex;
     background-color: #082c6c;
     height: 100px;
     width: 1000px;
     border-radius: 30px;
+    
 }
+.Texto {
+    font-size: 30px;        
+    color: #c4ad5c;
+    position: absolute;
+    top: 20px;             
+    left: 300px;           
+    line-height: 1;         
+}
+
 .logo{
     position: absolute;
     height: 60px;
-    width: 170px;
-   right:300px;
-   top :30px;
+    width: 190px;
+    right:50px;
+    top :20px;
 
-    
 }
-.mi-boton{
+.Ajustes {
+    border: none;
+    border-radius: 50%;
+    position: absolute;
+    top: 10px;      
+    right: 285px;   
+    height: 40px;  
+    width: 40px;
+    background-color: transparent;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
+
+.Atras {
+    border: none;
+    border-radius: 50%;
+    position: absolute;
+    top: 100px;      
+    right: 285px;   
+    height: 40px;   
+    width: 40px;
+    background-color: transparent;
+    cursor: pointer;
+    padding: 0;
+    overflow: hidden; 
+
+}
+.Atras img {
+    width: 100%;
+    height: 100%; 
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.pac{
     color: white;
     margin-left: 130px;
-    top: 70px;
+    top: 60px;
+    position: absolute;
+    height: 30px;
+    width: 100px;
+    border-radius: 30px;
+    cursor: pointer;
+    background-color: #c4ad5c;
+    transition: backgroud-color 0.3s ease;
+
+}
+.pac:hover{
+     background-color: #2069e0;
+}
+
+.mi-boton{
+    color: white;
+    margin-left: 20px;
+    top: 50px;
     position: absolute;
     height: 30px;
     width: 100px;
@@ -52,7 +116,7 @@ background-attachment: fixed;
 .Boton{
     color: white;
     margin-left: 20px;
-    top: 70px;
+    top: 60px;
     position: absolute;
     height: 30px;
     width: 100px;
@@ -64,10 +128,7 @@ background-attachment: fixed;
 .Boton:hover{
      background-color: #2069e0;
 }
-p{
-font-size: 30px;
-position: absolute;
-}
+
 .tablas{
   display: flex;
   position: absolute;
@@ -103,7 +164,7 @@ tr, th {
     color: #c4ad5c;
     position: absolute;
     top: -40px;
-    margin-left: 28px;
+    margin-left: -280px;
 
 }
 table{
@@ -140,56 +201,67 @@ border-radius:10px;
 
 
 }
-.group {
-  line-height: 28px;
-  align-items: center;
-  position: absolute;
-  max-width: 190px;
-  top: 70px;
-  left: 212px;
+tr{
+    height: 50px;
+    width: 100px;
+}
+.fecha{
+    height: 70px;
+    width: 70px;
 }
 
-.input {
-  font-family: "Montserrat", sans-serif;
-  width: 100%;
-  height: 30px;
-  padding-left: 2.5rem;
-  /*box-shadow: 0 0 0 1.5px #2b2c37, 0 0 25px -17px #000;*/
-  border: 0;
-  border-radius: 12px;
-  background-color: #c4ad5c;
-  outline: none;
-  color: #000000;
-  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
-  cursor: text;
-  z-index: 0;
+
+.hamburger {
+    font-size: 30px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 1001;
 }
 
-.input::placeholder {
-  color: #000000;
+.menu {
+    position: fixed;
+    top: 0;
+    left: -250px; 
+    width: 250px;
+    height: 100%;
+    background-color: #082c6c;
+    transition: left 0.3s ease;
+    padding-top: 60px;
+    z-index: 1000;
 }
 
-.input:hover {
-  box-shadow: 0 0 0 2.5px #2f303d, 0px 0px 25px -15px #000;
+.menu.show {
+    left: 0;
 }
 
-.input:active {
-  transform: scale(0.95);
+.menu ul {
+    list-style: none;
+    padding: 0;
 }
 
-.input:focus {
-  box-shadow: 0 0 0 2.5px #082c6c;
+.menu ul li {
+    margin: 20px 0;
+    text-align: center;
 }
 
-.search-icon {
-  position: absolute;
-  left: 1rem;
-  fill: #000000;
-  width: 1rem;
-  height: 1rem;
-  pointer-events: none;
-  z-index: 1;
-  top: 8px;
+.menu ul li a {
+    color: #c4ad5c;
+    text-decoration: none;
+    font-size: 20px;
+    display: block;
+    padding: 10px;
+    transition: background 0.2s;
+}
+
+.menu ul li a:hover {
+    background: #2069e0;
+    color: white;
+    border-radius: 10px;
 }
 
 @media (max-width: 768px) {
@@ -218,10 +290,27 @@ border-radius:10px;
     width: 100%;
     overflow-x: auto;
   }
-  .group{
-    width: 210px;
-    top:40px;
-    left: 20px;
-  }
 }
 
+@media (max-width: 480px) {
+  .Cita {
+    font-size: 28px;
+  }
+
+  table {
+    font-size: 12px;
+  }
+
+  .mi-boton, .pac, .Boton {
+    width: 80px;
+    height: 25px;
+    font-size: 12px;
+  }
+  .Boton{
+    top:40px;
+  }
+  .pac{
+    top:40px;
+    left:-15px;
+  }
+}
