--- a/SegundaPagina.css
+++ b/SegundaPagina.css
@@ -17,7 +17,8 @@ background-attachment: fixed;
 
 }
 .superior{
-
+    position: absolute;
+    top: 50px;
     display: flex;
     background-color: #082c6c;
     height: 100px;
@@ -38,8 +39,8 @@ background-attachment: fixed;
     position: absolute;
     height: 60px;
     width: 190px;
-    right:310px;
-    top :30px;
+    right:50px;
+    top :20px;
 
 }
 .Ajustes {
@@ -58,35 +59,47 @@ background-attachment: fixed;
     padding: 0;
 }
 
-.Ajustes img {
-    height: 70%;     
-    width: 70%;
-    object-fit: contain;
-}
 .Atras {
     border: none;
     border-radius: 50%;
     position: absolute;
-    top: 10px;      
+    top: 100px;      
     right: 285px;   
-    height: 40px;  
+    height: 40px;   
     width: 40px;
     background-color: transparent;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     padding: 0;
+    overflow: hidden; 
+
+}
+.Atras img {
+    width: 100%;
+    height: 100%; 
+    object-fit: cover;
+    border-radius: 50%;
 }
 
-.Atras img {
-    height: 70%;     
-    width: 70%;
-    object-fit: contain;
-}
-.mi-boton{
+.pac{
     color: white;
     margin-left: 120px;
+    top: 60px;
+    position: absolute;
+    height: 30px;
+    width: 100px;
+    border-radius: 30px;
+    cursor: pointer;
+    background-color: #c4ad5c;
+    transition: backgroud-color 0.3s ease;
+
+}
+.pac:hover{
+     background-color: #2069e0;
+}
+
+.mi-boton{
+    color: white;
+    margin-left: 20px;
     top: 70px;
     position: absolute;
     height: 30px;
@@ -150,8 +163,8 @@ tr, th {
     font-size: 50px;
     color: #c4ad5c;
     position: absolute;
-    top: -30px;
-    margin-left: 28px;
+    top: -40px;
+    margin-left: -280px;
 
 }
 table{
@@ -191,4 +204,103 @@ border-radius:10px;
 tr{
     height: 50px;
     width: 100px;
+}
+.fecha{
+    height: 70px;
+    width: 70px;
+}
+
+
+.hamburger {
+    font-size: 30px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 1001;
+}
+
+.menu {
+    position: fixed;
+    top: 0;
+    left: -250px; 
+    width: 250px;
+    height: 100%;
+    background-color: #082c6c;
+    transition: left 0.3s ease;
+    padding-top: 60px;
+    z-index: 1000;
+}
+
+.menu.show {
+    left: 0;
+}
+
+.menu ul {
+    list-style: none;
+    padding: 0;
+}
+
+.menu ul li {
+    margin: 20px 0;
+    text-align: center;
+}
+
+.menu ul li a {
+    color: #c4ad5c;
+    text-decoration: none;
+    font-size: 20px;
+    display: block;
+    padding: 10px;
+    transition: background 0.2s;
+}
+
+.menu ul li a:hover {
+    background: #2069e0;
+    color: white;
+    border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+  .superior {
+    width: 100%;
+    flex-direction: column;
+    height: auto;
+  }
+
+  .Texto {
+    font-size: 24px;
+    position: static; 
+    margin: 10px 0;
+  }
+
+  .logo {
+    width: 120px;
+    height: auto;
+  }
+
+  .tablas {
+    flex-direction: column;
+    width: 100%;
+    overflow-x: auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .Cita {
+    font-size: 28px;
+  }
+
+  table {
+    font-size: 12px;
+  }
+
+  .mi-boton, .pac, .Boton {
+    width: 80px;
+    height: 25px;
+    font-size: 12px;
+  }
 }
