--- a/Doctores/SegundaPagina.css
+++ b/Doctores/SegundaPagina.css
@@ -2,6 +2,7 @@
     font-family:'OpenSans';
     src: url(Fuentes/OpenSans-Italic-VariableFont_wdth\,wght.ttf);
 }
+
 body{
 
 align-items: center;
@@ -13,6 +14,15 @@ background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
 background-attachment: fixed;
+
+
+}
+.Atender{
+color: white;
+width: 100px;
+height: 20px;
+background-color:#00bf63;
+border-radius:10px;
 
 
 }
