--- a/SegundaPagina.css
+++ b/SegundaPagina.css
@@ -100,7 +100,7 @@ background-attachment: fixed;
 .mi-boton{
     color: white;
     margin-left: 20px;
-    top: 70px;
+    top: 65px;
     position: absolute;
     height: 30px;
     width: 100px;
@@ -188,6 +188,15 @@ color: white;
 width: 100px;
 height: 20px;
 background-color:#082c6c;
+border-radius:10px;
+
+
+}
+.Atender{
+color: white;
+width: 100px;
+height: 20px;
+background-color:#00bf63;
 border-radius:10px;
 
 
