--- a/Doctores/SegundaPagina.css
+++ b/Doctores/SegundaPagina.css
@@ -138,6 +138,21 @@ border-radius:10px;
 .Boton:hover{
      background-color: #2069e0;
 }
+.Boton2{
+    color: white;
+    margin-left: 240px;
+    top: 60px;
+    position: absolute;
+    height: 30px;
+    width: 100px;
+    border-radius: 30px;
+    cursor: pointer;
+    background-color: #c4ad5c;
+    transition: backgroud-color 0.3s ease;
+}
+.Boton2:hover{
+     background-color: #2069e0;
+}
 
 .tablas{
   display: flex;
