--- a/Doctores/Estilomedico.css
+++ b/Doctores/Estilomedico.css
@@ -267,3 +267,34 @@ border-radius:10px;
     color: white;
     border-radius: 10px;
 }
+
+.anterior{
+    color: white;
+  margin-left: 30px;
+    top: 70px;
+    position: absolute;
+    height: 30px;
+    width: 100px;
+    border-radius: 30px;
+    cursor: pointer;
+    background-color: #c4ad5c;
+    transition: backgroud-color 0.3s ease;
+}
+.anterior:hover{
+     background-color: #2069e0;
+}
+.anterior2{
+    color: white;
+  margin-left: 247px;
+    top: 70px;
+    position: absolute;
+    height: 30px;
+    width: 100px;
+    border-radius: 30px;
+    cursor: pointer;
+    background-color: #c4ad5c;
+    transition: backgroud-color 0.3s ease;
+}
+.anterior2:hover{
+     background-color: #2069e0;
+}
