--- a/Doctores/reprogramar.css
+++ b/Doctores/reprogramar.css
@@ -55,3 +55,13 @@ button {
 button:hover {
     background-color: #e6c85c;
 }
+.Atras {
+    background-color:white;
+    color: #0a295a;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.Atras:hover {
+    background-color: #e6c85c;
+}
