--- a/Pacientes/Estilo.css
+++ b/Pacientes/Estilo.css
@@ -2,7 +2,7 @@
     color: white;
     position: absolute;
     top: 50px;
-    height: 550px;
+    height: 500px;
     width: 400px;
     background-color:#082c6c;
     border-radius: 30px;
@@ -30,4 +30,41 @@
     align-self: flex-start;  
     text-align: left;
     margin-left: 20px;   
+}
+.Siguiente{
+    margin-left: 50px;
+ font-weight: bold;
+    color:#082c6c;
+  margin-top: 60px;
+  width: 100%;
+  padding: 10px;
+  border-radius: 15px;
+  border: none;
+  background-color: #c2c9da;
+  font-size: 14px;
+  margin-bottom: 15px;
+cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.Siguiente:hover {
+  background-color: #e6c85c;
+}
+.Volver{
+    margin-left: 50px;
+    font-weight: bold;
+  margin-top: 10px;
+  width: 100%;
+  padding: 10px;
+  border-radius: 15px;
+  border: none;
+  background-color: #c2c9da;
+  font-size: 14px;
+  margin-bottom: 15px;
+  color: #082c6c;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.Volver:hover {
+  background-color: #e6c85c;
+
 }
