--- a/EstiloP.css
+++ b/EstiloP.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family:'Paris';
     src: url(Fuentes/Paris\ Forbel\ TTF.ttf);
@@ -6,155 +5,150 @@
 @font-face {
     font-family:'Rosaline';
     src: url(Fuentes/Rosaline.otf);
-    }
+}
 .superior {
-      width: 100%;       
-      height: 50px;       
-      background-color: #163d73; 
-      position:fixed;
-      top: 0;
-      left: 0;
-
-    }
-
-.Inferior{
-      width:100%;       
-      height:50px;       
-      background-color: #163d73; 
-      position:fixed;
-      bottom:0;
-      left:0;
-}   
-
+    width: 100%;
+    height: 50px;
+    background-color: #163d73;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+.Inferior {
+    width: 100%;
+    height: 50px;
+    background-color: #163d73;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
 .texto {
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        text-align: center;
-        top: 0; 
-        color: antiquewhite;
-        margin-top: 10px;
-        font-size: 25px;
-
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    top: 0;
+    color: antiquewhite;
+    margin-top: 10px;
+    font-size: 25px;
 }
-
-.mi-boton{
-  background-color: #d7b65a;
-  top: 0;
-  margin-top: 7px;
-  position: absolute;
-  right: 10px;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  color: antiquewhite;
-  transition: background-color 0.3s ease;
+.mi-boton {
+    background-color: #d7b65a;
+    top: 0;
+    margin-top: 7px;
+    position: absolute;
+    right: 10px;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    color: antiquewhite;
+    transition: background-color 0.3s ease;
 }
-.mi-boton:hover{
-  background-color:#2069e0;
+.mi-boton:hover {
+    background-color: #2069e0;
 }
-
-.superior img{
-   position: absolute; 
-  top: 7px;  
-  left: 40px;  
-  width: 120px; 
-  height: auto; 
+.superior img {
+    position: absolute;
+    top: 7px;
+    left: 40px;
+    width: 120px;
+    height: auto;
 }
-
-.Inferior img{
-  position: absolute;
-  bottom:0;
-  margin-left: 48%;
-  width: 93px;
+.Inferior img {
+    position: absolute;
+    bottom: 0;
+    margin-left: 48%;
+    width: 93px;
 }
-
-body{
-    background-color:rgb(255, 255, 255);
+body {
+    background-color: #fff;
     font-family: Arial, sans-serif;
     padding: 5%;
     box-sizing: border-box;
-    margin: 20px, 0;
- 
+    margin: 20px 0;
 }
-.calendario{
-
-  padding-top: 5px;
-  display:flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  max-width: 550px;
-  height: 610px;
-   
-   background-color:#8599b6;
-   flex-direction: column;
-   border-radius: 30px;
+.calendario {
+    padding-top: 5px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    max-width: 550px;
+    height: 610px;
+    background-color: #8599b6;
+    flex-direction: column;
+    border-radius: 30px;
 }
 table {
-
-  border-collapse: collapse;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    border-collapse: collapse;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
 }
-table th, table tr{
-  border: 1px solid black;
-  padding: 10px;
-  text-align: center;
+table th, table tr {
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
 }
 tr, th {
-  width: 50px;
-  height: 50px;
+    width: 50px;
+    height: 50px;
 }
-.dias{background-color: #d7b65a;}
-.informacion_1{
-  display: flex;
-  align-items: center;     
-  justify-content: center; 
-  height: 200px;    
-  background-color: #8599b6;
-  max-width: 550px;
-  height: 100px;
-  border-radius: 30px;
-  margin-top: 500px;
+.dias {
+    background-color: #d7b65a;
 }
-.chatbot{
+.informacion_1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   
-  max-width: 550px;
-  height: 470px;
-  background-color:#8599b6;
-  border-radius: 30px;
-  margin-top: 150px;
+    max-width: 550px;
+    height: 100px;
+    border-radius: 30px;
+    margin-top: 500px;
 }
-.informacion_2{
-  padding: 20px;
-text-align: center;
-align-items: center;
-  background-color: #8599b6;
-  max-width: 550px;
-  height: 100px;
-  border-radius: 30px;
-  
+.chatbot {
+    max-width: 590px;
+    height: 470px;
+    background-color: #8599b6;
+    border-radius: 30px;
+    margin-top: 150px;
 }
-
+.informacion_2 {
+    padding: 20px;
+    text-align: center;
+    align-items: center;
+    background-color: #8599b6;
+    max-width: 550px;
+    height: 100px;
+    border-radius: 30px;
+}
 .grid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 0px;
+    grid-template-areas: "calendario . informacion_2";
+}
+h1 { color: #011125; }
+h3 { font-size: 20px; color: #092142; }
+h2 { color: #092142; font-family: "Rosaline"; font-size: 20px; }
+p.ayuda { font-size: 15px; color: #092142; font-family:"Rosaline"; }
 
- display: grid;
-  grid-template-columns: 50% 50%; 
-  grid-template-rows: 0px;
-  grid-template-areas: "calendario . informacion_2";
-}
+@media (max-width: 480px) {
+    body { padding: 3%; display: flex; flex-direction: column; align-items: center; gap: 20px; }
+    .grid { display: flex; flex-direction: column; align-items: center; gap: 20px; width: 100%; }
 
-h1{color:  #011125;}
-h3 {  font-size: 20px;
-color:#092142;;
-}
-h2{
-  color:#092142 ;
-  font-family: "Rosaline";
-  font-size: 20px;
-}
-p.ayuda {
-  font-size: 15px;
-  color:#092142;
-  font-family:"Rosaline";
+    .calendario, .chatbot, .informacion_2, .informacion_1 {
+        width: 90%;
+        max-width: 410px;
+        margin-top: 0;
+    }
+
+    .calendario { height: 500px; }
+    .chatbot { height: 470px; margin-top: -40px;}
+    .informacion_2 { height: 100px; width:340px; }
+    .informacion_1 { height: 100px; order: 4; } /* aparece al final, debajo de chatbot */
+
+    .superior img { width: 100px; left: 20px; }
+    .Inferior img { width: 80px; margin-left: 45%; }
+    .texto { font-size: 22px; }
+    .mi-boton { padding: 8px 12px; font-size: 14px; }
 }
 
