--- a/Pacientes/Estilo.css
+++ b/Pacientes/Estilo.css
@@ -68,3 +68,22 @@ cursor: pointer;
   background-color: #e6c85c;
 
 }
+.Volver2{
+    margin-left: 40px;
+    font-weight: bold;
+  margin-top: -10px;
+  width: 80%;
+  padding: 10px;
+  border-radius: 15px;
+  border: none;
+  background-color: #c2c9da;
+  font-size: 14px;
+  margin-bottom: 15px;
+  color: #082c6c;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.Volver2:hover {
+  background-color: #e6c85c;
+
+}
