--- a/SegundaPagina.css
+++ b/SegundaPagina.css
@@ -113,6 +113,23 @@ background-attachment: fixed;
 .mi-boton:hover{
      background-color: #2069e0;
 }
+
+.mi-boton2{
+    color: white;
+    margin-left: 130px;
+    top: 65px;
+    position: absolute;
+    height: 30px;
+    width: 100px;
+    border-radius: 30px;
+    cursor: pointer;
+    background-color: #c4ad5c;
+    transition: backgroud-color 0.3s ease;
+
+}
+.mi-boton2:hover{
+     background-color: #2069e0;
+}
 .Boton{
     color: white;
     margin-left: 20px;
@@ -274,10 +291,13 @@ tr{
 }
 
 @media (max-width: 768px) {
+    
   .superior {
+    margin-top: 30px;
     width: 100%;
     flex-direction: column;
     height: auto;
+
   }
 
   .Texto {
