--- a/estiloL.css
+++ b/estiloL.css
@@ -1,8 +1,12 @@
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 body {
@@ -11,10 +15,11 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
+  overflow: hidden;
 }
 
 .login-container {
