--- a/EstiloP.css
+++ b/EstiloP.css
@@ -21,6 +21,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
+    z-index: 5;
 }
 .texto {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -144,7 +145,7 @@ p.ayuda { font-size: 15px; color: #092142; font-family:"Rosaline"; }
     .calendario { height: 500px; }
     .chatbot { height: 470px; margin-top: -40px;}
     .informacion_2 { height: 100px; width:340px; }
-    .informacion_1 { height: 100px; order: 4; } /* aparece al final, debajo de chatbot */
+    .informacion_1 { height: 100px; order: 4; } 
 
     .superior img { width: 100px; left: 20px; }
     .Inferior img { width: 80px; margin-left: 45%; }
