--- a/EstiloP.css
+++ b/EstiloP.css
@@ -141,6 +141,11 @@ p.ayuda { font-size: 15px; color: #092142; font-family:"Rosaline"; }
         max-width: 410px;
         margin-top: 0;
     }
+    #chatbox{
+        margin-left:10px;
+        height:100px;
+        width: 100px;
+    }
 
     .calendario { height: 500px; }
     .chatbot { height: 470px; margin-top: -40px;}
