--- a/Doctores/Estilomedico.css
+++ b/Doctores/Estilomedico.css
@@ -315,11 +315,12 @@ border-radius:10px;
   margin-top: 30px;
   margin-left: -1px;
 }
-.group{left: 55px;
-
-  width: 160px;
-
-}
+.mi-boton{
+    top:80px;
+  }
+  .Boton{
+     top:80px;
+  }
 .anterior2{
    margin-left: 225px;
 }
