--- a/admin.css
+++ b/admin.css
@@ -215,4 +215,18 @@ border-radius:10px;
   height: 120px;
   
   }
+  .logo{
+    top: 50px;
+    width:110px ;
+    height: 40px;
+    left: 350px;
+  }
+  .Texto{margin-left: 80px;}
+  .hamburger{margin-left: 20px;}
+  .mi-boton{
+    top:80px;
+  }
+  .Boton{
+     top:80px;
+  }
 }
